--- a/media.css
+++ b/media.css
@@ -488,8 +488,7 @@
   #container .main_visual .txt_box>strong{
     font-size: 2.8rem;
     font-weight: 200;
-    line-height: 30px;
-    
+    line-height: 30px;    
   }
   #container .main_visual .txt_box>p{
     margin-top: 8px;
@@ -589,5 +588,11 @@
   #footer .footer_inner .company_info p{
     margin-top: 8px;
     font-size: 1.2rem;
+  }
+}
+/*breakpoint 360*/
+@media screen and (max-width: 360px){
+  #container .signature_menu .menu_list ul li img{
+    height: 255px;
   }
 }
