--- a/css/layout.css
+++ b/css/layout.css
@@ -460,7 +460,7 @@ body{
     transform: translateX(-50%);
   }
 }
-/*youtube 영상*/
+/*youtube 영상
 #container .youtube_video{
   position: relative;
   display: block;
@@ -475,6 +475,15 @@ body{
   left: 0;
   width: 100%;
   height: 100%; 
+}*/
+/*video영상 영역*/
+#container .youtube_video video{
+  display: block;
+  margin: 0 auto 180px;
+  max-width: 1380px;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 /*퀵 영역*/
 #quick_area{
